examples/test/testpolicy6524.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6524
  namespace: namespace312
spec:
  podSelector:
    matchLabels:
      key13: value26
      key46: value16
      key9: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value16
      podSelector:
        matchLabels:
          key20: value27
          key36: value34
          key21: value6
